[package]
name = "tiangong"
version = "0.1.0"
authors = ["frank2@dc949.org"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase", "synchapi", "fileapi", "errhandlingapi", "winsock2", "ws2tcpip", "impl-default"] }